FrostWire 1.5.5 - MAY/07/2015
 - Domain alias manager removed.

FrostWire 1.5.4 - MAY/04/2015
 - Crash fixes.
 - Major icons make over. Crisp look on higher density screens.

FrostWire 1.5.3 - APRIL/23/2015
 - Crash fixes.
 - Reduced installer size to 7.6 MB.
 - Lollipop compatibility fixes.
 - Bitsnoop search faster for individual files.
 - Binary Optimizations.
 - libtorrent updates.
 - Spanish, Portuguese, Polish translation updates.

FrostWire 1.5.2 - APRIL/17/2015
 - Significant improvements in search results for individual files.
 - Significant reduction of DHT queries, freeing up networking resources.
 - Faster torrent download start.
 - Fixes download error on some Archive.org search results.
 - When no search results are found, search suggestions are calculated from search keywords.
 - Fixes Yify search.
 - Icon/buttons refresh on transfer screen.
 - Fixes issues with SD Card storage on Android 5.0 (Lollipop)
 - FrostWire notification icon now Lollipop compatible.

FrostWire 1.5.1 - APRIL/07/2015
 - Removed all notifications explaining why no more YouTube search results on Basic version.
 - Updated about screen to denote what FrostWire distribution is installed.

FrostWire 1.5.0 - APRIL/03/2015
 - Upgraded frostwire-jlibtorrent to the latest code from libtorrent.
 - Users can now donate to torrent creators, both Fiat and Bitcoin when available.
 - TPB, BTJunkie, KAT, Monova searches fixed.
 - New Bittorrent setting to enable/disable DHT connectivity.
 - YouTube search disabled for Google Play distribution.
 - Fixes annoying bug where user would be notified for old finished downloads.
 - Fixes bug where songs that were deleted were not being cleared from playlists.
 - Fixes bug where removing last song from Favorites playlist would not clear.
 - Fixes bug where it would show "Play All" menu action on empty playlists.
 - Fixes bug where sharing on WiFi from certain 3rd-party file explorers wouldn't work.