@@ -20,7 +20,7 @@
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="com.frostwire.android" android:installLocation="auto"
-	android:versionCode="188" android:versionName="1.5.4">
+	android:versionCode="100190" android:versionName="1.5.5">
 
 	<uses-sdk android:minSdkVersion="15" android:targetSdkVersion="21" />
 
